test/sema/typeck/trait/impl-method-where-clause-more-bounds.dora
trait Foo {}
trait Baz {}

trait Bar {
    fn test[T]() where T: Foo;
}

class MyClass

impl Bar for MyClass {
    fn test[T]() where T: Foo + Baz {}
}
